--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,20 +34,76 @@ button {
 
   width: 100%;
   height: 100vh;
-  padding: 2rem;
+  // padding: 2rem;
   background-color: $bgPink;
 
+  // .headerNav {
+  //   display: flex;
+  //   flex-direction: row;
+  //   justify-content: space-between;
+
+  //   h1 {
+  //     font-family: $fontCinzelDecorative;
+  //     font-size: 4.5rem;
+  //     color: $fontGrey;
+  //     span {
+  //       font-size: 7rem;
+  //       color: $fontPink;
+  //       text-shadow: 5px 5px 4px $fontGrey;
+  //     }
+  //   }
+
+  //   nav {
+  //     display: flex;
+  //     flex-direction: column;
+  //     a {
+  //       font-size: 2.5rem;
+  //       text-align: right;
+  //       color: $fontGrey;
+  //       text-decoration: none;
+  //       padding-left: 0.5rem;
+  //       &:hover {
+  //         color: $fontPink;
+  //         transition: color 1s ease;
+  //       }
+  //     }
+  //   }
+  // }
+.headerSticky {
+  background-color: #fff6f6ef;
+
+  width: 100vw;
+  height: 14rem;
+  padding: 0;
+  position: fixed;
+}
   .headerNav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
+    position: relative;
+    
+    .headerLogo {
+      position: fixed;
+      top: 2rem;
+      left: 2rem;
+    }
+    .headerNav {
+      position: fixed;
+      top: 2rem;
+      right: 2rem;
+    }
+    
     h1 {
       font-family: $fontCinzelDecorative;
-      font-size: 4.5rem;
+      // font-size: 4.5rem;
+      font-size: 3.3rem;
+
       color: $fontGrey;
       span {
-        font-size: 7rem;
+        font-size: 5rem;
+        // font-size: 7rem;
+
         color: $fontPink;
         text-shadow: 5px 5px 4px $fontGrey;
       }
@@ -58,6 +114,7 @@ button {
       flex-direction: column;
       a {
         font-size: 2.5rem;
+        text-align: right;
         color: $fontGrey;
         text-decoration: none;
         padding-left: 0.5rem;
@@ -69,6 +126,7 @@ button {
     }
   }
 
+
   .headerTitle {
     display: flex;
     flex-direction: column;
@@ -78,7 +136,7 @@ button {
     left: 15%;
 
     h2 {
-      font-size: 3.5rem;
+      font-size: 3.3rem;
       font-family: $fontCinzelDecorative;
       span {
         font-size: 5rem;
@@ -435,33 +493,19 @@ footer {
   .header {
     .headerNav {
       h1 {
-        font-size: 3.6rem;
+        font-size: 2.7rem;
         span {
-          font-size: 5.6rem;
+          font-size: 4rem;
         }
       }
     }
 
     .headerTitle {
       h2 {
-        font-size: 2.8rem;
+        font-size: 2.7rem;
         span {
           font-size: 4rem;
         }
-      }
-    }
-  }
-
-  footer {
-    div:nth-of-type(2) {
-      font-size: 1.5rem;
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-      padding-bottom: 4rem;
-
-      p {
-        margin: 0;
       }
     }
   }
@@ -486,15 +530,7 @@ footer {
 
   footer {
     div:nth-of-type(2) {
-      font-size: 1.5rem;
-      display: flex;
-      flex-direction: column;
-      text-align: center;
       padding-bottom: 0.5rem;
-
-      p {
-        margin: 0;
-      }
     }
   }
 }
@@ -506,20 +542,17 @@ footer {
 
     .headerNav {
       h1 {
-        font-size: 6rem;
+        font-size: 4rem;
         white-space: nowrap;
-
         span {
-          font-size: 8rem;
+          font-size: 6rem;
         }
       }
 
       nav {
         flex-direction: row;
-
         a {
           padding-left: 1.5rem;
-
           &:hover {
             transition: color 1s ease;
           }
@@ -537,11 +570,9 @@ footer {
 
       h2 {
         font-size: 4rem;
-
         span {
           font-size: 6rem;
         }
-
         &:nth-of-type(2) {
           margin-top: 0;
         }
@@ -564,7 +595,7 @@ footer {
     width: 45%;
     margin: 0 auto;
   }
-  
+
   footer {
     div:nth-of-type(2) {
       font-size: 1.8rem;
@@ -580,31 +611,31 @@ footer {
   }
 }
 
-    // Tablet and Desktop
-    @media only screen and (min-width: 768px) and (max-width: 1023px),
-      only screen and (min-width: 1024px) {
-      .profileTitle div {
-        &:nth-of-type(1) {
-          margin-top: 1rem;
-        }
-        &:nth-of-type(2) {
-          margin: 0.5rem 0 1rem;
-        }
-        &:nth-of-type(1),
-        &:nth-of-type(2) {
-          display: flex;
-          flex-direction: row;
-        }
-        h4:nth-of-type(1),
-        h4:nth-of-type(3),
-        p:nth-of-type(1),
-        p:nth-of-type(3) {
-          margin: 0;
-        }
-        h4:nth-of-type(2),
-        p:nth-of-type(2) {
-          display: flex;
-          margin: 0 0.5rem;
-        }
-      }
+// Tablet and Desktop
+@media only screen and (min-width: 768px) and (max-width: 1023px),
+  only screen and (min-width: 1024px) {
+  .profileTitle div {
+    &:nth-of-type(1) {
+      margin-top: 1rem;
     }
+    &:nth-of-type(2) {
+      margin: 0.5rem 0 1rem;
+    }
+    &:nth-of-type(1),
+    &:nth-of-type(2) {
+      display: flex;
+      flex-direction: row;
+    }
+    h4:nth-of-type(1),
+    h4:nth-of-type(3),
+    p:nth-of-type(1),
+    p:nth-of-type(3) {
+      margin: 0;
+    }
+    h4:nth-of-type(2),
+    p:nth-of-type(2) {
+      display: flex;
+      margin: 0 0.5rem;
+    }
+  }
+}
